# studies-ml

./: .gitignore  CMakeLists.txt  README.md  commands.tex  mac_m1_build.md  notes-emfa.tex  notes-watermelon.tex  studies-ml.tex
basics/: CMakeLists.txt  basics.cpp  basics.py  create_resnet18_scriptmodule.py  feed_forward_neural_network.cpp  feed_forward_neural_network.py  linear_model.tex  linear_regression.cpp  linear_regression.py  logistic_regression.cpp  logistic_regression.py  neural_net.cpp  neural_net.h
cmake/: fetch_libtorch.cmake  fetch_mnist.cmake  find_gz_extractor.cmake  imagenette.cmake
notes-watermelon/: ResNet_and_CNN.tex  linear_model.tex
starter/: CMakeLists.txt  const_test.cpp  define_nn_models.py  download_mnist_dataset.py  example-app.cpp  inspecting_generated_images.py  introduction.cpp  model_evaluation_and_selection.tex  starter.py  using_cpp_frontend.cpp
utils/image_io/: CMakeLists.txt
utils/image_io/include/: image_io.h
utils/image_io/src/: image_io.cpp
